# Study-FFmpeg-Principle

./: README.md
10-1_scale/: CMakeLists.txt  main.c
10-1_scale_luo/: CMakeLists.txt  main.c
10-2_scale/: CMakeLists.txt  main.c
10-2_scale/filter/: find_out_all_filters.sh
10-2_scale/filter/1_scale/: 1_scale.sh
10-2_scale/filter/2_overlay/: 1_logo.sh
10-2_scale/filter/3_crop/: crop.sh
10-2_scale_luo/: CMakeLists.txt  main.c
10-3_scale/: CMakeLists.txt  main.c
11-1_split-simple/: CMakeLists.txt  file_path.h  main.c  split_1.c  split_1.h  split_2.c  split_2.h
11-2_split/: CMakeLists.txt  main.c
12-overlay-simple/: CMakeLists.txt  README.md  main2.c
12-overlay-simple-luo/: CMakeLists.txt  main.c
13-aformat/: CMakeLists.txt  README.md  main.c
14_sws_scale-1/: CMakeLists.txt  README.md  main.c
14_sws_scale-2/: CMakeLists.txt  README.md  main.c
15_sws_convert/: CMakeLists.txt  README.md  main.c
16-discard_audio/: CMakeLists.txt  README.md  main.c
17-format_filter/: CMakeLists.txt  README.md  main.c
17-format_filter-luo/: CMakeLists.txt  README.md  main.c
18-av_demuxer_iterate/: CMakeLists.txt  README.md  main.c
19-av_opt_next/: CMakeLists.txt  main.c  readme.md
1_avformat_open_input/: CMakeLists.txt  main.c  readme.md
20-avformat_seek_file/: CMakeLists.txt  README.md  main.c
21-avio/: CMakeLists.txt  main.c  main_write.c  readme.md
21-avio-main-luo/: CMakeLists.txt  main.c
21-avio-pratice_1/: CMakeLists.txt  main.c
21-avio-write-luo/: CMakeLists.txt  main.c
22_fifobuffer/: CMakeLists.txt  README.md  main.c
23_video_time/: CMakeLists.txt  README.md  main.c
24_x264_x265_with_ffmpeg/: 1_概览.md  2_yuv转h265.md  3_H265编码参数设置[I帧间隔、B帧个数(B帧决策类型)、crf、码率配置.md  4_修改视频码率.md  5_去掉音频.md  CMakeLists.txt  README.md
25_avio_output/: CMakeLists.txt  README.md  main.c
27_parse_h264_NAL_with_mp4/: CMakeLists.txt  README.md  main.c  other_code.c
28_Bitstream_Filter/: CMakeLists.txt  README.md  main.c
2_AVDictionary/: CMakeLists.txt  main.c  readme.md
30_Get_video_width_and_height/: CMakeLists.txt  README.md  main.cpp
30_volumedetect/: CMakeLists.txt  README.md  main.cpp
31_4kTo1080p/: CMakeLists.txt  README.md  convert_1.cpp  convert_2.cpp  main.cpp
31_Get_Video_PTS/: CMakeLists.txt  main.cpp
33_frameToImage/: CMakeLists.txt  main.c
3_avpacket/: CMakeLists.txt  main.c  readme.md
4_AVCodec/: CMakeLists.txt  README.md  main.c
5_encode/: CMakeLists.txt  README.md  main.c
6_encode_args/: CMakeLists.txt  README.md  main.c
7_avio_open2/: CMakeLists.txt  README.md  main.c
8_av_log/: CMakeLists.txt  README.md  main.c
9-error_code/: CMakeLists.txt  README.md  main.c
SimpleWindow/: CMakeLists.txt  README.md  main.c
h264/2_parse_nalu/: CMakeLists.txt  README.md  h264_parser.c  h264_parser.h  main.c
read_ffplay/: CMakeLists.txt  README.md  config.h  config_components.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  ffplay.c  my_fifo.c  my_fifo.h  read_ffplay.c  read_ffplay.h
read_ffplay/测试脚本/: ffmplay播放视频.sh
start_read_ffplay/: CMakeLists.txt  README.md  cmdutils.c  config.h  ffplay.c
start_read_ffplay/测试脚本/: ffmplay播放视频.sh
